--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,18 @@ background-color: grey;
 }
 
 html, body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 nav {
 background-color: rgb(121, 177, 121);
 height: 4em;
-width: 100%;
-padding: 1px 1px;
+padding: 1px 10px;
+display: flex;
+justify-content: space-between;
 }
 
 .photos {
@@ -24,3 +26,4 @@ width: 100%;
   height: 100vh;
   width: 100%;
 }
+
