--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ height: 4em;
 padding: 1px 10px;
 display: flex;
 justify-content: space-between;
+color: white;
 }
 
 .photos {
@@ -25,5 +26,12 @@ width: 100%;
 .cart {
   height: 100vh;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: white;
 }
 
